# churn-prediction

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
churn_prediction/cmd/web/: eda.py  main.py  model_structured.py
churn_prediction/data/processed/: churn_cleaned_01.csv
churn_prediction/data/raw/: BankChurners.csv
