[tool.poetry]
name = "churn-prediction"
version = "0.1.0"
description = ""
authors = ["Bee Bee Wijaya <beebee.wijaya@brank.as>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
plotly = "^5.16.1"
streamlit = "^1.26.0"
imbalanced-learn = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
